# trying

./: LICENSE
cpp/cppattributes/: CMakeLists.txt  main.cpp
cpp/file_lock_inheritance/: CMakeLists.txt  file_lock_fork.cpp
cpp/file_locking/: .gitignore  CMakeLists.txt  main.cpp
cpp/intel_pcm/: CMakeLists.txt  main.cpp
cpp/windows/battery_health_monitor/: CMakeLists.txt
cpp/windows/battery_health_monitor/src/: main.cpp
cpp/windows/network_signal_strength/: CMakeLists.txt
cpp/windows/network_signal_strength/src/: main.cpp
cpp/windows/profiler/: CMakeLists.txt
cpp/windows/profiler/src/: main.cpp
cs/FindEmbeddedResourcesInIL/: FindEmbeddedResourcesInIL.csproj  Program.cs
cs/LibreHwMonitor/: BatteryHealthInfo.cs  CPUHealthInfo.cs  GPUHealthInfo.cs  LibreHwMonitor.csproj  MemoryHealthInfo.cs  NetworkHealthInfo.cs  Program.cs  StorageHealthInfo.cs  SystemHealthInfo.cs
make/: Makefile
nsi/current_time/: script.nsi
perl/: README.md  bios.pl  compare_versions.pl  create_file.pm  create_xml.pl  defined.pl  diamond_operator.pl  download_from_s3.pl  error_handling.pl  hash_ref.pl  match_base_url.pm  match_md5_checksums.pl  match_url_hosts.pl  md5.pl  os.pl  parse_path.pl  parse_string.pl  parse_xml.pl  rmtree.pl
perl/file_locking/: .gitignore  README.md  cpanfile  cpanfile.snapshot  main.pl
python/: audit_report.py
zsh/: digest_of_files.sh  set_euo.zsh
